# rwd-sql-python-demo

./: README.md  pyproject.toml  requirements.txt  setup.py
demo/: omop_rwd_demo.ipynb
rwd_sql_python_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
